--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "crypto-js": "^4.2.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.6.1",
-    "next": "14.2.3",
+    "next": "^14.2.33",
     "otplib": "^12.0.1",
     "qrcode": "^1.5.4",
     "react": "^18",
