--- a/package.json
+++ b/package.json
@@ -25,17 +25,19 @@
     "react-dom": "^18",
     "react-hook-form": "^7.51.5",
     "react-hot-toast": "^2.6.0",
-    "zod": "^3.23.8"
+    "zod": "^3.23.8",
+    "tailwindcss": "^4.1.14",
+    "autoprefixer": "^10.4.21"
   },
   "devDependencies": {
     "@types/react": "^19.2.0",
     "@types/react-dom": "^19.2.0",
-    "autoprefixer": "^10.4.21",
+    
     "clsx": "^2.1.1",
     "eslint": "^8",
     "eslint-config-next": "14.2.3",
     "postcss": "^8.5.6",
-    "tailwindcss": "^4.1.14",
+    
     "typescript": "^5"
   }
 }
